--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 
 <head>
+    <script src="scripts/init.js" defer></script>
+    <script src="scripts/util.js" defer></script>
+    <script src="scripts/geometry.js" defer></script>
+    <script src="scripts/draw.js" defer></script>
+
     <style>
         #main {
             left: 25%;
