--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <script src="scripts/util.js" defer></script>
     <script src="scripts/geometry.js" defer></script>
     <script src="scripts/draw.js" defer></script>
+    <script src="scripts/keys.js" defer></script>
+    <script src="scripts/entity.js" defer></script>
+    <script src="scripts/collision.js" defer></script>
+    <script src="scripts/game.js" defer></script>
 
     <style>
         #main {
@@ -19,7 +23,7 @@
 
 <body>
 
-    <canvas id="main" width="550" height="550"></canvas>
+    <canvas id="main" width="550" height="550" tabindex="1"></canvas>
 
 </body>
 
